--- a/css/style.css
+++ b/css/style.css
@@ -260,11 +260,11 @@ body {
   clear: both;
 }
 .logo {
-  display: block;
+  display: none;
   padding: 10px 0;
   width: 165px;
   height: 60px;
-  background-image: url("images/logo-header.png");
+  background-image: url("images/lifan222.png");
   background-position: 0px 10px;
   background-repeat: no-repeat;
   -webkit-background-size: 165px 60px;
